<resources>
    <string name="app_name">CriminalIntent</string>
    <!-- Strings used for fragments for navigation -->

    <string name="crime_title_hint">Enter crime title</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Detail</string>
    <string name="crime_solved_label">Solved</string>
    <string name="call_police">Call police !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_crime">Add Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="no_crimes">There are no crimes</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report_call">Call Suspect for Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_info">call %s to %s.</string>
    <string name="camera">camera</string>
    <string name="zoom">zoom</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
</resources>